build/redes-peg.js
const redesParser = // Generated by PEG.js 0.10.0.
//
// https://pegjs.org/
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function C() { this.constructor = child; }
    C.prototype = parent.prototype;
    child.prototype = new C();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
      literal: function(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class: function(expectation) {
        var escapedParts = expectation.parts.map(function(part) {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any: function() {
        return "any character";
      },

      end: function() {
        return "end of input";
      },

      other: function(expectation) {
        return expectation.description;
      }
    };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = expected.map(describeExpectation);
      var i, j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== undefined ? options : {};

    var peg$FAILED = {};

    var peg$startRuleFunctions = { grammar: peg$parsegrammar };
    var peg$startRuleFunction = peg$parsegrammar;

    var peg$c0 = function(intro, defs) {
      return (intro||'') + '\n' + defs;
    };
    var peg$c1 = function(defs) {

      var methods = defs.map(def=>(
    	`function rule_${def.name}() {${indent(`return ${def.rule}.apply(this)`)}}`
      ));
      methods.push(`function $_start() {\n  return rule_${defs[0].name}.apply(this)\n}`)
      
      return indent(methods.join('\n'))
    };
    var peg$c2 = "=";
    var peg$c3 = peg$literalExpectation("=", false);
    var peg$c4 = function(ident, or) {
      return {name:ident,rule:or}
    };
    var peg$c5 = /^[|\/]/;
    var peg$c6 = peg$classExpectation(["|", "/"], false, false);
    var peg$c7 = function(head, seq) { return seq };
    var peg$c8 = function(head, tail) { 
    	if(!tail.length) return head; 
        return `$_or(${indent([head].concat(tail).join(',\n'))})`
    };
    var peg$c9 = function(head, chunk) { return chunk };
    var peg$c10 = function(head, tail) {return [head].concat(tail)};
    var peg$c11 = function(chunk) { return [chunk] };
    var peg$c12 = function(chunks, action) {
        var names = [];
        var args = [];
        chunks.forEach(chunk=>{
          if(chunk.name) {
            names.push(chunk.name);
            args.push(`[${chunk.piece},'${chunk.name}']`);
          } else {
            args.push(`[${chunk.piece}]`);
          }
        })
        var fn = '';
        if(action) {
        	try {
              new Function('','return ('+action+')')
     	   	  fn = `, ({${names.join(',')}}) => (\n${action}\n)`
            } catch(err) {
              try {
              	new Function('',action)
     	   	    fn = `, ({${names.join(',')}}) => {\n${action}\n}`
              } catch(err) {
                throw(err);
              }
            }
        }
        return `$_seq([${indent(args.join(',\n'))}]${fn})`
    };
    var peg$c13 = function(block) { return block };
    var peg$c14 = ":";
    var peg$c15 = peg$literalExpectation(":", false);
    var peg$c16 = function(name, piece) {
    	return {name,piece}
    };
    var peg$c17 = function(piece) {
    	return {piece}
    };
    var peg$c18 = "!";
    var peg$c19 = peg$literalExpectation("!", false);
    var peg$c20 = function(bit) {
        return `$_bang(${bit})`
    };
    var peg$c21 = "&";
    var peg$c22 = peg$literalExpectation("&", false);
    var peg$c23 = function(bit) {
        return `$_amp(${bit})`
    };
    var peg$c24 = "$";
    var peg$c25 = peg$literalExpectation("$", false);
    var peg$c26 = function(bit) {
        return `$_dollar(${bit})`
    };
    var peg$c27 = function(ident) {
    	return `rule_${ident}` 
    };
    var peg$c28 = "?";
    var peg$c29 = peg$literalExpectation("?", false);
    var peg$c30 = function(atom) {
        return `$_maybe(${atom})`
    };
    var peg$c31 = "*";
    var peg$c32 = peg$literalExpectation("*", false);
    var peg$c33 = function(atom) {
        return `$_star(${atom})`
    };
    var peg$c34 = "+";
    var peg$c35 = peg$literalExpectation("+", false);
    var peg$c36 = function(atom) {
        return `$_plus(${atom})`
    };
    var peg$c37 = "(";
    var peg$c38 = peg$literalExpectation("(", false);
    var peg$c39 = ")";
    var peg$c40 = peg$literalExpectation(")", false);
    var peg$c41 = function(or) { return or };
    var peg$c42 = /^['']/;
    var peg$c43 = peg$classExpectation(["'", "'"], false, false);
    var peg$c44 = "\\'";
    var peg$c45 = peg$literalExpectation("\\'", false);
    var peg$c46 = /^[^']/;
    var peg$c47 = peg$classExpectation(["'"], true, false);
    var peg$c48 = "i";
    var peg$c49 = peg$literalExpectation("i", false);
    var peg$c50 = function(c, i) { 
      if (i) return `$_itoken('${c.toLowerCase()}')`;
      else return `$_token('${c}')`;
    };
    var peg$c51 = /^[""]/;
    var peg$c52 = peg$classExpectation(["\"", "\""], false, false);
    var peg$c53 = "\\\"";
    var peg$c54 = peg$literalExpectation("\\\"", false);
    var peg$c55 = /^[^"]/;
    var peg$c56 = peg$classExpectation(["\""], true, false);
    var peg$c57 = function(c, i) { return `$_token("${c}",${!!i})`};
    var peg$c58 = "[";
    var peg$c59 = peg$literalExpectation("[", false);
    var peg$c60 = "\\]";
    var peg$c61 = peg$literalExpectation("\\]", false);
    var peg$c62 = /^[^\]]/;
    var peg$c63 = peg$classExpectation(["]"], true, false);
    var peg$c64 = "]";
    var peg$c65 = peg$literalExpectation("]", false);
    var peg$c66 = function(c, i) { return `$_char(/${c}/${i||''})`};
    var peg$c67 = ".";
    var peg$c68 = peg$literalExpectation(".", false);
    var peg$c69 = function(dot) { return `$_dot()`};
    var peg$c70 = "{";
    var peg$c71 = peg$literalExpectation("{", false);
    var peg$c72 = "}";
    var peg$c73 = peg$literalExpectation("}", false);
    var peg$c74 = function(chunks) { return chunks.join('') };
    var peg$c75 = /^[^'"{}`]/;
var peg$c76 = peg$classExpectation(["'", "\"", "{", "}", "`"], true, false);
    var peg$c77 = "'";
    var peg$c78 = peg$literalExpectation("'", false);
    var peg$c79 = /^[^\n']/;
    var peg$c80 = peg$classExpectation(["\n", "'"], true, false);
    var peg$c81 = "\"";
    var peg$c82 = peg$literalExpectation("\"", false);
    var peg$c83 = /^[^\n"]/;
    var peg$c84 = peg$classExpectation(["\n", "\""], true, false);
    var peg$c85 = "`";
var peg$c86 = peg$literalExpectation("`", false);
    var peg$c87 = "\\$";
    var peg$c88 = peg$literalExpectation("\\$", false);
    var peg$c89 = /^[^$`]/;
var peg$c90 = peg$classExpectation(["$", "`"], true, false);
    var peg$c91 = /^[a-z_]/i;
    var peg$c92 = peg$classExpectation([["a", "z"], "_"], false, true);
    var peg$c93 = /^[a-z0-9]/i;
    var peg$c94 = peg$classExpectation([["a", "z"], ["0", "9"]], false, true);
    var peg$c95 = /^[ \n\t\r]/;
    var peg$c96 = peg$classExpectation([" ", "\n", "\t", "\r"], false, false);
    var peg$c97 = "\n";
    var peg$c98 = peg$literalExpectation("\n", false);

    var peg$currPos = 0;
    var peg$savedPos = 0;
    var peg$posDetailsCache = [{ line: 1, column: 1 }];
    var peg$maxFailPos = 0;
    var peg$maxFailExpected = [];
    var peg$silentFails = 0;

    var peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function offset() {
      return peg$savedPos;
    }

    function range() {
      return [peg$savedPos, peg$currPos];
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos];
      var p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line: details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;

        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos);
      var endPosDetails = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line: startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line: endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsegrammar() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseaction();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsedefs();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$c0(s1, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsedefs() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsedef();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parsedef();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsedef() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseident();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s4 = peg$c2;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseor();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseeol();
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$c4(s2, s6);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseor() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseseq();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (peg$c5.test(input.charAt(peg$currPos))) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseseq();
              if (s7 !== peg$FAILED) {
                peg$savedPos = s3;
                s3 = peg$c7(s1, s7);
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (peg$c5.test(input.charAt(peg$currPos))) {
              s5 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseseq();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s3;
                  s3 = peg$c7(s1, s7);
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$c8(s1, s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseseq() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsechunk();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parse__();
        if (s5 !== peg$FAILED) {
          s6 = peg$parsechunk();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s4;
            s4 = peg$c9(s2, s6);
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parse__();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsechunk();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s4;
                s4 = peg$c9(s2, s6);
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s1;
          s1 = peg$c10(s2, s3);
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = peg$parsenamed_chunk();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c11(s2);
        }
        s1 = s2;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseaction();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$c12(s1, s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parsepiece();
      }

      return s0;
    }

    function peg$parseaction() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseblock();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$c13(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsechunk() {
      var s0;

      s0 = peg$parsenamed_chunk();
      if (s0 === peg$FAILED) {
        s0 = peg$parseanon_chunk();
      }

      return s0;
    }

    function peg$parsenamed_chunk() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseident();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s3 = peg$c14;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c15); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsepiece();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$c16(s1, s5);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseanon_chunk() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parsepiece();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsepiece() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 33) {
        s1 = peg$c18;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsebit();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$c20(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 38) {
          s1 = peg$c21;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c22); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsebit();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$c23(s2);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 36) {
            s1 = peg$c24;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c25); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parsebit();
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$c26(s2);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$parsebit();
          }
        }
      }

      return s0;
    }

    function peg$parsebit() {
      var s0;

      s0 = peg$parsestar();
      if (s0 === peg$FAILED) {
        s0 = peg$parseplus();
        if (s0 === peg$FAILED) {
          s0 = peg$parsemaybe();
          if (s0 === peg$FAILED) {
            s0 = peg$parseatom();
          }
        }
      }

      return s0;
    }

    function peg$parserule() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$currPos;
      peg$silentFails++;
      s2 = peg$parsedef();
      peg$silentFails--;
      if (s2 === peg$FAILED) {
        s1 = undefined;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseident();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$c27(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsemaybe() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseatom();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 63) {
            s3 = peg$c28;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c29); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$c30(s1);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestar() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseatom();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 42) {
            s3 = peg$c31;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c32); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$c33(s1);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseplus() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseatom();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 43) {
            s3 = peg$c34;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c35); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$c36(s1);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseatom() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$parsetoken();
      if (s0 === peg$FAILED) {
        s0 = peg$parsechar();
        if (s0 === peg$FAILED) {
          s0 = peg$parsedot();
          if (s0 === peg$FAILED) {
            s0 = peg$parserule();
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 40) {
                s1 = peg$c37;
                peg$currPos++;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c38); }
              }
              if (s1 !== peg$FAILED) {
                s2 = peg$parse_();
                if (s2 !== peg$FAILED) {
                  s3 = peg$parseor();
                  if (s3 !== peg$FAILED) {
                    s4 = peg$parse_();
                    if (s4 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 41) {
                        s5 = peg$c39;
                        peg$currPos++;
                      } else {
                        s5 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c40); }
                      }
                      if (s5 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s0 = peg$c41(s3);
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsetoken() {
      var s0, s1, s2, s3, s4;
